--- a/style.css
+++ b/style.css
@@ -1,10 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
+#language a{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgba(227, 225, 225, 0.754);
+    text-decoration: none;
+    font-weight: bold;
+    position: sticky;
+    display: inline;
+    float: right;
+    padding-top: 10px;
+    padding-right: 10px;
+}
+
+#language a:hover{
+    text-decoration: underline;
+}
+
 .opening{
     background-image: url('img/openingbackground.jpg');
+    height: 670px;
     width: 100%;
-    height: 640px;
     font-family: 'Open Sans', sans-serif;
-    margin: none;
+    margin: 0px;
+    border: 0px;
+    text-shadow: 1px 1px black;
 }
 
 .opening h1{
@@ -21,16 +40,49 @@
     text-align: center;
 }
 body{
+    position: relative;
     background-color: rgb(25, 25, 25);
 }
 
 #seta{
     display: flex;
     justify-content: center;
-    margin: 0px;
+    align-items: flex-end;
+    padding-bottom: 20px;
     filter: invert(100%);
 }
 
 #seta:hover{
     padding-top: 10px;
+}
+
+main{
+    font-family: 'Open Sans', sans-serif;
+    background-color: white;
+    height: auto;
+    padding: 50px;
+}
+
+main h2{
+    font-size: 60px;
+}
+main h3{
+    font-size: 40px;
+}
+
+main ul{
+    margin-left: 0px;
+    padding-left: 0px;
+    padding-top: 0px;
+}
+main ul a{
+    display: inline-block;
+    margin-right: 10px;
+}
+footer{
+    background-color: black;
+    padding: 10px;
+    color: rgba(255, 255, 255, 0.871);
+    text-align: center;
+    border-radius: 0px 0px 10px 10px;
 }
