--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
+html.sr{
+    width: 100%;
+    height: 100%;
+}
 #language a{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: rgba(227, 225, 225, 0.754);
@@ -70,6 +74,21 @@ main h3{
     font-size: 40px;
 }
 
+.cliente:hover{
+    opacity: 95%;
+    
+}
+.client:hover img{
+    transform: scale(1.5);
+}
+
+.cliente#valora{
+    width: 200px;
+    height: 200px;
+    background-image: url('./img/valorabackground.png');
+    background-repeat: no-repeat;
+    background-color: salmon;
+}
 main ul{
     margin-left: 0px;
     padding-left: 0px;
@@ -82,6 +101,7 @@ main ul a{
 footer{
     background-color: black;
     padding: 10px;
+    margin-bottom: 10px;
     color: rgba(255, 255, 255, 0.871);
     text-align: center;
     border-radius: 0px 0px 10px 10px;
